changes by info FindBugs and others(?)